# api-reliability-suite

./: .dockerignore  .env  .env.example  .gitignore  .grype.yaml  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  app.json  docker-compose.yml  index.html  mkdocs.yml  prometheus.yml  pyproject.toml  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: ci.yml  dependency-review.yml  docs.yml  security.yml
adr/0001-hexagonal-architecture/: index.html
adr/0002-structured-logging/: index.html
adr/0003-ai-error-analysis/: index.html
api-reference/: index.html
architecture/: index.html
configuration/: index.html
deployment/: index.html
development/: index.html
docs/: api-reference.md  architecture.md  configuration.md  deployment.md  development.md  index.md  load-testing.md  observability.md  performance.md  reliability.md  security.md  setup.md  strategic_architecture.md  troubleshooting.md  wiki.md
docs/adr/: 0001-hexagonal-architecture.md  0002-structured-logging.md  0003-ai-error-analysis.md
docs/runbooks/: high-error-rate.md
docs/stylesheets/: extra.css
infra/alertmanager/: alertmanager.yml
infra/grafana/: dashboard.json
infra/grafana/dashboards/: api-reliability-overview.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/k8s/: deployment.yaml  hpa.yaml
infra/prometheus/: alert_rules.yml  prometheus.yml
loadtests/k6/: reliability-smoke.js
loadtests/results/: latest-report.md  latest-summary.json
migrations/: env.py
migrations/versions/: 2cefa8e5646a_add_session_tables.py  4eb07dc75372_create_users_table.py
observability/: index.html
performance/: index.html
reliability/: index.html
scripts/: cli_debugger.py  demo.sh
search/: search_index.json
security/: index.html
setup/: index.html
src/: main.py
src/core/: auth.py  circuit_breaker.py  config.py  exceptions.py  llm.py  logging.py  logs.py  middleware.py  rate_limit.py  tracing.py
src/core/llm/: __init__.py  factory.py  guardrails.py  summarizer.py
src/core/llm/providers/: base.py  google.py  groq.py  openai.py
src/domain/: models.py
src/infrastructure/: database.py  db_base.py  dependency_checks.py  fallback_cache.py  http_client.py  session_models.py  session_repository.py  user_models.py  user_repository.py
src/scripts/: cli_debugger.py
src/services/: auth_service.py
tests/: conftest.py  test_api.py  test_api_advanced.py  test_auth.py  test_reliability.py
tests/unit/core/: test_config.py  test_google_provider.py  test_groq_provider.py  test_llm_factory.py  test_llm_summarizer.py  test_openai_provider.py
troubleshooting/: index.html
wiki/: index.html
