[tool.poetry]
name = "api-reliability-suite"
version = "0.1.0"
description = "A robust template for debugging and testing High-Performance APIs"
authors = ["Dare AbdulGoniyy adelekedare2012@gmail.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
structlog = "^25.5.0"
opentelemetry-sdk = "^1.39.1"
opentelemetry-exporter-otlp-proto-grpc = "^1.39.1"
opentelemetry-instrumentation-fastapi = "^0.60b1"
pydantic-settings = "^2.12.0"
slowapi = "^0.1.9"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "<4.1"
python-multipart = "^0.0.21"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]