[tool.poetry]
name = "api-reliability-suite"
version = "1.0.0"
description = "A Production-Ready Reliability Suite: Hexagonal Architecture, AI Triage, and Full-Stack Observability"
authors = ["Dare AbdulGoniyy adelekedare2012@gmail.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
structlog = "^25.5.0"
opentelemetry-sdk = "^1.39.1"
opentelemetry-exporter-otlp-proto-grpc = "^1.39.1"
opentelemetry-instrumentation-fastapi = "^0.60b1"
pydantic-settings = "^2.12.0"
slowapi = "^0.1.9"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "<4.1"
python-multipart = "^0.0.21"
prometheus-fastapi-instrumentator = "^7.1.0"
groq = "^1.0.0"
openai = "^2.14.0"
google-generativeai = "^0.8.6"
aiofiles = "^25.1.0"
pybreaker = "^1.4.1"
mkdocs-material = "^9.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"
pre-commit = "^4.5.1"
ruff = "^0.14.10"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
